--- a/blog/main/static/main/css/main.css
+++ b/blog/main/static/main/css/main.css
@@ -17,3 +17,36 @@ ul#menu {
 ul#menu li {
   display: inline-block;
 }
+
+/* Button */
+.btn {
+  display: inline-block;
+  color: black;
+  font-size: 0.8em;
+  padding: 0.3em 1em;
+  text-decoration: none;
+  border: thin solid gray;
+  background: linear-gradient(#f7f7f7, #dedede);
+  border-radius: 7px;
+  font-family: Arial;
+}
+
+/* Messages */
+.success, .error {
+  padding: 0.8em 0 0.8em 2em;
+}
+
+.success {
+  background-color: #ddffdd;
+  border: thin solid green;
+}
+
+.error {
+  background-color: #fbd9d8;
+  border: thin solid red;
+}
+
+/* Misc */
+.inlineBlock {
+  display: inline-block;
+}
