--- a/blog/article/templates/article/article.html
+++ b/blog/article/templates/article/article.html
@@ -1,16 +1,12 @@
-<!doctype html>
+{% extends 'main/base.html' %}
 {% load staticfiles %}
-<html>
-  <head>
-    <title>部落格</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
-  </head>
-  <body>
-    {% include 'main/menu.html' %}
-    <h1>歡迎來到我的部落格</h1>
-    {% include 'main/messages.html' %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'article/css/article.css' %}">
+{% endblock %}
+
+{% block heading %}歡迎蒞臨{% endblock %}
+
+{% block content %}
     {% include 'article/searchForm.html' %}
     <p class="inlineBlock"><a class="btn" href="{% url 'article:articleCreate' %}">新增文章</a></p>
     <br><br><hr>
@@ -18,11 +14,11 @@
       {% for item in items %}
         {% if forloop.first %}
           <h3 class="inlineBlock"><a href="{% url 'article:articleRead' item.id %}">{{ item.title }}</a></h3>
-		      <form class="inlineBlock" method="post" action="{% url 'article:articleDelete' item.id %}">
-		        {% csrf_token %}
-		        
-		        <input class="btn deleteConfirm" type="submit" value="刪除">
-		      </form>
+          <form class="inlineBlock" method="post" action="{% url 'article:articleDelete' item.id %}">
+            {% csrf_token %}
+            
+            <input class="btn deleteConfirm" type="submit" value="刪除">
+          </form>
           <p>發表時間：{{ item.pubDateTime|date:'Y-m-d H:i' }}</p>
           <div class="articleContent">{{ item.content|linebreaks|truncatechars_html:13 }}</div>
         {% else %}
@@ -34,7 +30,5 @@
       {% endfor %}
       <hr>
     {% endfor %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src={% static 'main/js/deleteConfirm.js' %}></script>
-  </body>
-</html>
+{% endblock %}
